WIP migrate to Java 18